package grpc

import (
	"context"
	"log"

	pb "code-audit-mcp/proto"
)

// CallChainAnalyzerService implements pb.CallChainAnalyzerServer
type CallChainAnalyzerService struct {
	pb.UnimplementedCallChainAnalyzerServer
}

// NewCallChainAnalyzerService creates a new call chain analyzer service
func NewCallChainAnalyzerService() *CallChainAnalyzerService {
	return &CallChainAnalyzerService{}
}

// BuildCallGraph implements pb.CallChainAnalyzer/BuildCallGraph
func (s *CallChainAnalyzerService) BuildCallGraph(ctx context.Context, req *pb.BuildCallGraphRequest) (*pb.BuildCallGraphResponse, error) {
	log.Printf("üîó Building call graph for: %s (entry points: %v)", req.FilePath, req.EntryPoints)

	// TODO: Implement actual call graph building

	resp := &pb.BuildCallGraphResponse{
		Success:      true,
		GraphId:      "graph_" + req.FilePath,
		NodeCount:    25,
		EdgeCount:    40,
		BuildTimeMs:  300,
		ErrorMessage: "",
	}

	return resp, nil
}

// QueryCallPath implements pb.CallChainAnalyzer/QueryCallPath
func (s *CallChainAnalyzerService) QueryCallPath(ctx context.Context, req *pb.QueryCallPathRequest) (*pb.QueryCallPathResponse, error) {
	log.Printf("üîç Querying call path from %s to %s", req.SourceFunction, req.TargetFunction)

	// TODO: Implement actual path query

	nodes := []*pb.CallGraphNode{
		{
			NodeId:       "node_1",
			FunctionName: req.SourceFunction,
			FilePath:     "/path/to/file.go",
			LineNumber:   10,
			InDegree:     2,
			OutDegree:    3,
			IsExternal:   false,
			IsRecursive:  false,
			NodeType:     "function",
		},
		{
			NodeId:       "node_2",
			FunctionName: "intermediate",
			FilePath:     "/path/to/file.go",
			LineNumber:   25,
			InDegree:     1,
			OutDegree:    1,
			IsExternal:   false,
			IsRecursive:  false,
			NodeType:     "function",
		},
		{
			NodeId:       "node_3",
			FunctionName: req.TargetFunction,
			FilePath:     "/path/to/file.go",
			LineNumber:   40,
			InDegree:     2,
			OutDegree:    0,
			IsExternal:   false,
			IsRecursive:  false,
			NodeType:     "function",
		},
	}

	paths := []*pb.CallPath{
		{
			PathIndex:  1,
			Nodes:      nodes,
			PathLength: 3,
		},
	}

	resp := &pb.QueryCallPathResponse{
		Paths:      paths,
		TotalPaths: 1,
		PathExists: true,
	}

	return resp, nil
}

// QueryCallDepth implements pb.CallChainAnalyzer/QueryCallDepth
func (s *CallChainAnalyzerService) QueryCallDepth(ctx context.Context, req *pb.QueryCallDepthRequest) (*pb.QueryCallDepthResponse, error) {
	log.Printf("üìä Querying call depth for: %s (direction: %s)", req.FunctionName, req.Direction)

	// TODO: Implement actual depth query

	levels := []*pb.DepthLevel{
		{
			Level:     1,
			Functions: []string{"func_a", "func_b"},
		},
		{
			Level:     2,
			Functions: []string{"func_c", "func_d", "func_e"},
		},
		{
			Level:     3,
			Functions: []string{"func_f"},
		},
	}

	resp := &pb.QueryCallDepthResponse{
		IncomingDepth: 2,
		OutgoingDepth: 3,
		MaxDepth:      3,
		Levels:        levels,
	}

	return resp, nil
}

// AnalyzeCycles implements pb.CallChainAnalyzer/AnalyzeCycles
func (s *CallChainAnalyzerService) AnalyzeCycles(ctx context.Context, req *pb.AnalyzeCyclesRequest) (*pb.AnalyzeCyclesResponse, error) {
	log.Printf("üîÑ Analyzing cycles starting from: %s", req.StartFunction)

	// TODO: Implement actual cycle analysis

	cycles := []*pb.CallCycle{
		{
			CycleId:     1,
			Functions:   []string{"funcA", "funcB", "funcC", "funcA"},
			CycleLength: 3,
			Lines:       []int32{10, 20, 30},
		},
	}

	resp := &pb.AnalyzeCyclesResponse{
		HasCycles:   true,
		Cycles:      cycles,
		TotalCycles: 1,
	}

	return resp, nil
}

// FindDeadCode implements pb.CallChainAnalyzer/FindDeadCode
func (s *CallChainAnalyzerService) FindDeadCode(ctx context.Context, req *pb.FindDeadCodeRequest) (*pb.FindDeadCodeResponse, error) {
	log.Printf("üíÄ Finding dead code in: %s", req.FilePath)

	// TODO: Implement actual dead code detection

	deadFunctions := []*pb.DeadCodeInfo{
		{
			FunctionName: "unusedHelper",
			FilePath:     req.FilePath,
			StartLine:    50,
			EndLine:      65,
			LineCount:    15,
			Complexity:   2.5,
			Reason:       "Not called by any entry point",
		},
		{
			FunctionName: "legacyFunction",
			FilePath:     req.FilePath,
			StartLine:    100,
			EndLine:      120,
			LineCount:    20,
			Complexity:   3.8,
			Reason:       "Replaced by newer implementation",
		},
	}

	resp := &pb.FindDeadCodeResponse{
		DeadFunctions:  deadFunctions,
		TotalDeadCount: int32(len(deadFunctions)),
	}

	return resp, nil
}
